Fix inherited background image overlapping in tiny logo placeholders

--- a/style.css
+++ b/style.css
@@ -1564,6 +1564,7 @@ ul {
     align-items: center;
     justify-content: center;
     background-color: var(--primary-light);
+    background-image: none;
     color: var(--primary-color);
     border-radius: 50%;
     border: 2px solid var(--primary-color);
